# george_or_not

./: README.md  pyproject.toml  test_case_CV_storozhenko.ipynb
