[tool.poetry]
name = "test-case"
version = "0.1.0"
description = "Dependences for Junior CV engineer test case"

authors = [
    "Sofia Storozhenko <storozhenko@phystech.edu>"
]

# readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/python-poetry/poetry"
homepage = "https://github.com/python-poetry/poetry"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "3.7.9"  # Compatible python versions must be declared here
toml = "^0.9"
aiohttp = { version = "3.7.3" }
asyncio = { version = "3.4.3" }
ipykernel = { version = "5.5.0" }
jupyterlab = { version = "2.2.6" }
numpy = { version = "1.19.2" }
opencv-python = { version = "4.5.1.48" }
pandas = { version = "1.2.2" }
scikit-learn = { version = "0.24.1" }
torch = { version = "1.7.1" }
requests = { version = "2.25.1" }
matplotlib = { version = "3.3.4" }
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
